
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-test-guardrail-monitor"
version = "0.1.0"
description = "Monitor experiment guardrails, rollout quality, and anomaly thresholds during launches."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
